--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+html {
+    background-color:#F0FBFF;
+    background-size: cover;
+}
 .header > img {
     float: left;
     height: 150px;
@@ -8,4 +12,33 @@
     display: inline-block;
     font-size:25px;
     white-space : nowrap;
+    background-color: lightblue;
+    background-size: cover;
+    width: 100%;
+}
+.subhead {
+    font-family: 'Poppins', serif;
+    font-size: 18px;
+}
+.preferences {
+    font-family: 'Poppins', serif;
+    font-size: 14px;
+}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display: inline-block;
+    margin-right: 10px;
+    text-align: center;
+    width: auto;
+    height: auto;
+    background-color: #C3DFE8;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+.card:hover{
+    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
+}
+.card-content{
+    padding: 2px 16px;
 }
