--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
-html {
+body {
     background-color:#F0FBFF;
-    background-size: cover;
+    font-family: 'Manrope', serif;
 }
 .header > img {
     float: left;
@@ -8,21 +8,24 @@ html {
     width: auto;
 }
 .header {
-    font-family: 'Poppins', serif;
+    font-family: 'Manrope', serif;
     display: inline-block;
     font-size:25px;
     white-space : nowrap;
+    
     background-color: lightblue;
     background-size: cover;
     width: 100%;
 }
 .subhead {
-    font-family: 'Poppins', serif;
+    font-family: 'Manrope', serif;
     font-size: 18px;
+    margin-left: 5px;
 }
 .preferences {
-    font-family: 'Poppins', serif;
+    font-family: 'Manrope', serif;
     font-size: 14px;
+    margin-left: 10px;
 }
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -30,15 +33,54 @@ html {
     display: inline-block;
     margin-right: 10px;
     text-align: center;
-    width: auto;
+    width: 100%;
     height: auto;
     background-color: #C3DFE8;
     margin-bottom: 10px;
     border-radius: 5px;
 }
+
+.filters {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display: inline-block;
+    margin-right: 10px;
+    width: 100%;
+    height: auto;
+    background-color: #C3DFE8;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
 .card:hover{
     box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 }
 .card-content{
     padding: 2px 16px;
 }
+
+.bold{
+    font-weight: bold;
+}
+
+img {
+    width:  300px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.check {
+    height: 12px;
+    width: 12px;
+}
+
+.options {
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
