--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ body {
     display: inline-block;
     font-size:25px;
     white-space : nowrap;
-    
+
     background-color: lightblue;
     background-size: cover;
     width: 100%;
@@ -28,16 +28,25 @@ body {
     margin-left: 10px;
 }
 .card {
+    outline: 2px solid black;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     display: inline-block;
     margin-right: 10px;
     text-align: center;
-    width: 100%;
+    flex: 1 0 33%;
+    width: 400px;
+    align-items: flex-start;
     height: auto;
+    /* flex-wrap: wrap; */
     background-color: #C3DFE8;
     margin-bottom: 10px;
     border-radius: 5px;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .filters {
@@ -83,4 +92,3 @@ a {
     text-decoration: none;
     color: black;
 }
-
