--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,11 @@
         <div class="subhead">
             <h2>Please select your preferences</h2>
         </div>
+        <div class="prefecences">
+            <form action="/" method="post" enctype="multipart/form-data">
+            <label for="query">Search: </label>
+            <input type="text" id="query" name="query">
+        </div>
         <div class="preferences">
             <form action="/" method="post" enctype="multipart/form-data">
             <p>Noise Level:</p>
@@ -58,30 +63,35 @@
             <br>
         </div>
     </div>
-
+    {% if no_results %} 
+    <p>No Results Found, Please adjust search criteria</p>
+    {% else %}
     <div class="row">
-      {% for result in results %}
-        <div class="card">
-            <h2>{{ result.name }}</h2>
-            <img src="{{result.img_url}}">
-            <div class="card-content">
-                <p><a class="bold">Address:</a> <a target="_blank" href="{{ result.link }}">{{ result.address }}</a></p>
-                {% if result.food %}
-                <p>Food <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
-                {% else %}
-                <p>Food <img class="check" src="static/images/StudySpot-logos/red-x.png"></p>
-                {% endif %}
-                {% if result.study_rooms %}
-                <p>Study Rooms <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
-                {% else %}
-                <p>Study Rooms <img class="check" src="static/images/StudySpot-logos/red-x.png"></p>
-                {% endif %}
-                <p><a class="bold">Description:</a> {{ result.description }}</p>
-                <br>
-            </div>
-        </div>
-      {% endfor %}
-    </div>
+        {% for result in results %}
+          <div class="card">
+              <h2>{{ result.name }}</h2>
+              <img src="{{result.img_url}}">
+              <div class="card-content">
+                  <p><a class="bold">Address:</a> <a target="_blank" href="{{ result.link }}">{{ result.address }}</a></p>
+                  {% if result.food %}
+                  <p>Food <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
+                  {% else %}
+                  <p>Food <img class="check" src="static/images/StudySpot-logos/red-x.png"></p>
+                  {% endif %}
+                  {% if result.study_rooms %}
+                  <p>Study Rooms <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
+                  {% else %}
+                  <p>Study Rooms <img class="check" src="static/images/StudySpot-logos/red-x.png"></p>
+                  {% endif %}
+                  <p><a class="bold">Description:</a> {{ result.description }}</p>
+                  <br>
+              </div>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+
     </form>
 </body>
 
