Finished business hours

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,9 @@
             <div class="card-content">
                 <p><a class="bold">Address:</a> <a target="_blank" href="{{ result.link }}">{{ result.address }}</a></p>
                 <p>Hours of operation:</p>
-                {{result.hours}}
+                {% for day in result.hours %}
+                <p> {{day}} </p>
+                {% endfor %}
                 {% if result.food %}
                 <p>Food <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
                 {% else %}
