--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,26 @@ body {
     background-color:#F0FBFF;
     font-family: 'Manrope', serif;
 }
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
 .header > img {
     float: left;
     height: 150px;
