--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,9 @@
             <img src="{{result.img_url}}">
             <div class="card-content">
                 <p><a class="bold">Address:</a> <a target="_blank" href="{{ result.link }}">{{ result.address }}</a></p>
-                <p>Hours of operation:</p>
+                <p class="smallText">Hours of Operation:</p>
                 {% for day in result.hours %}
-                <p> {{day}} </p>
+                <p class="smallText"> {{day}} </p>
                 {% endfor %}
                 {% if result.food %}
                 <p>Food <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
