--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             <img src="{{result.img_url}}">
             <div class="card-content">
                 <p><a class="bold">Address:</a> <a target="_blank" href="{{ result.link }}">{{ result.address }}</a></p>
-                <p class="smallText">Hours of Operation:</p>
+                <p class="mediumText">Hours of Operation:</p>
                 {% for day in result.hours %}
                 <p class="smallText"> {{day}} </p>
                 {% endfor %}
