--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,10 @@ a:active {
   font-size: 12px;
   line-height: 0.7;
 }
+.mediumText {
+  font-size: 16px;
+  line-height: 0.7;
+}
 .card {
     outline: 2px solid black;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
