--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -10,71 +10,21 @@
 
 <body>
     <div class="header">
-        <img src="static/images/StudySpot-logos/StudySpot-logos_transparent.png">
+        <img src="/static/images/StudySpot-logos/StudySpot-logos_transparent.png">
         <h1>Where should you study today?</h1>
         <div>
-            <a class='tab-text'href="/favorites/">Favorites</a>
+            <a class="tab-text" href="/">Home</a>
         </div>
     </div>
-    <div class="filters">
-        <div class="subhead">
-            <h2>Please select your preferences</h2>
-        </div>
-        <div class="prefecences">
-            <form action="/" method="post" enctype="multipart/form-data">
-                <label for="query">Search: </label>
-                <input type="text" id="query" name="query">
-        </div>
-        <div class="preferences">
-            <form action="/" method="post" enctype="multipart/form-data">
-                <p>Noise Level:</p>
-
-                <input type="radio" id="silent" name="noise" value="silent">
-                <label for="silent">Silent</label>
-                <input type="radio" id="medium" name="noise" value="medium">
-                <label for="medium">Medium</label>
-                <input type="radio" id="loud" name="noise" value="loud">
-                <label for="loud">Loud</label>
-                <br>
-
-
-        </div>
-        <div class="preferences">
-            <p>Location:</p>
-            <input type="radio" id="north" name="location" value="north">
-            <label for="north">North Campus</label>
-            <input type="radio" id="central" name="location" value="central">
-            <label for="central">Central Campus</label>
-            <input type="radio" id="medical" name="location" value="medical">
-            <label for="medical">Medical Campus</label>
-
-            <br>
-            <br>
-        </div>
-        <div class="preferences">
-            <input type="checkbox" id="open_now" name="open_now" value="open_now">
-            <label for="open_now">Open Now</label>
-
-
-            <input type="checkbox" id="food" name="food" value="food">
-            <label for="food">Food</label>
-
-            <input type="checkbox" id="study_rooms" name="study_rooms" value="study_rooms">
-            <label for="study_rooms">Study Rooms</label><br>
-            <br>
-            <input type="submit" value="Search">
-            <br>
-            <br>
-        </div>
-    </div>
+    
     {% if no_results %}
-    <p>No Results Found, Please adjust search criteria</p>
+    <p>No Favorites Found, Like a study spot and have it show up here!</p>
     {% else %}
     <div class="row">
         {% for result in results %}
         <div class="card">
             <h2>{{ result.name }}</h2>
-            <img src="{{result.img_url}}">
+            <img src="/{{result.img_url}}">
             <div class="card-content">
                 {% if result.favorite %}
                 <i onclick="toggle(this)" class="fa fa-heart liked" id="{{ result.place_id }}"></i>
@@ -87,15 +37,15 @@
                 <p class="smallText"> {{day}} </p>
                 {% endfor %}
                 {% if result.food %}
-                <p>Food <img class="check" src="static/images/StudySpot-logos/green-check.png"></p>
+                <p>Food <img class="check" src="/static/images/StudySpot-logos/green-check.png"></p>
                 {% else %}
-                <p>Food <img class="check" src="static/images/StudySpot-logos/red-x.png"></p>
+                <p>Food <img class="check" src="/static/images/StudySpot-logos/red-x.png"></p>
                 {% endif %}
                 {% if result.study_rooms %}
                 <p> <a target="_blank" href="{{ result.book_link }}">Study Rooms</a><img class="check"
-                        src="static/images/StudySpot-logos/green-check.png"></p>
+                        src="/static/images/StudySpot-logos/green-check.png"></p>
                 {% else %}
-                <p>Study Rooms <img class="check" src="static/images/StudySpot-logos/red-x.png"></p>
+                <p>Study Rooms <img class="check" src="/static/images/StudySpot-logos/red-x.png"></p>
                 {% endif %}
                 <p><a class="bold">Description:</a> {{ result.description }}</p>
                 <br>
@@ -106,7 +56,6 @@
     {% endif %}
     </form>
     <script>
-
     function toggle(x) {
         var favs = getCookie('favs').split(',')
         favs.pop() // remove last element (comma or empty str)
